fix: bound proxy resources and rate limit public APIs